<resources>
    <string name="app_name">AndroidAD</string>
    <!-- Page Titles -->
    <string name="sign_up_screen_title">Enter details to sign up</string>
    <string name="login_screen_title">First Aid Report Portal</string>
    <string name="add_screen_title">Report a new incident</string>
    <string name="edit_screen_title">Edit Report</string>
    <string name="home_screen_title">First Aid Reports</string>
    <string name="view_reports_screen_title">Reports submitted by:</string>


    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>
    <string name="back">Back</string>
    <!-- Add Screen -->
    <string name="add">Add</string>
    <!-- Edit Screen -->
    <string name="confirmChanges">Confirm Changes</string>
    <string name="edit">Edit</string>
    <!-- Home Screen -->
    <string name="selectUser">Select a first aider:</string>
    <string name="viewReports">View Reports</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <!-- LoginScreen -->
    <string name="email">Email</string>
    <string name="email_error_message">Please insert a valid email.</string>
    <string name="password">Password</string>
    <string name="password_error_message">Please insert a valid password</string>
    <!-- Sign Up Screen -->
    <string name="verify_email">Verify email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="first_name_hint">First Name</string>
    <string name="first_name_error_message">Firstname is blank</string>
    <string name="last_name_hint">Last Name</string>
    <string name="last_name_error_message">Last Name is blank</string>

    <!-- First Aid Form -->
    <string name="firstAider">First Aider</string>
    <string name="firstAider_error">First not entered</string>
    <string name="location">Location</string>
    <string name="location_error">Location not entered</string>
    <string name="date">Date</string>
    <string name="date_error">Date not entered</string>
    <string name="time">Time</string>
    <string name="time_error">Time not entered</string>
    <string name="injured_party">Injured person</string>
    <string name="injured_party_error">Person injured not entered</string>
    <string name="injury">Injury</string>
    <string name="injury_error">Injury not entered</string>
    <string name="treatment">Treatment Provided</string>
    <string name="treatment_error">Treatment not entered</string>
    <string name="advice">Advice Provided</string>
    <string name="advice_error">Advice provided not entered</string>

    <!-- ToolTipText -->
    <string name="firstAider_tooltip">Enter the name of the attending first aider</string>
    <string name="location_tooltip">Enter the location the injury occurred. Please be specific and include room number and building.</string>
    <string name="date_tooltip">Enter the date the incident occurred.</string>
    <string name="time_tooltip">Enter the time of the incident. If the specific time is not known please provide the timeframe</string>
    <string name="injured_party_tooltip">Enter the name of the person(s) who where treated for a injury</string>
    <string name="injury_tooltip">Enter the injury that the person was treated for</string>
    <string name="treatment_tooltip">Enter the treatment that was provided</string>
    <string name="advice_tooltip">Enter any advice that was provided to the person</string>

</resources>